--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,7 +23,7 @@
     height:800px;
     border:4px solid #000;
     background-color: rgba(255, 255, 255, 0.527);
-    text-align: center;
+    text-align:center;
 }
 
 /* Header */
@@ -141,6 +141,11 @@
 .style_aboutus ul{
     list-style:none;
 }
+
+/* Card_1 */
+
+
+
 
 
 
