--- a/stylesheet.css
+++ b/stylesheet.css
@@ -20,7 +20,7 @@
 
 #main_body{
     width:800px;
-    height:800px;
+    height: 2850px;
     border:4px solid #000;
     background-color: rgba(255, 255, 255, 0.527);
     text-align:center;
@@ -119,8 +119,8 @@
     border-radius:25px;
     margin:10px;
     padding:15px;
-    height:595px;
-    text-align: left;
+    height: 2645px;
+    text-align: justify;
 }
 
 /* .main_content_body:hover{
@@ -142,8 +142,25 @@
     list-style:none;
 }
 
-/* Card_1 */
+.img{
+    height:220px;
+    width:184px;
+    border:2px dashed #000;
+    border-radius:15px;
+}
 
+.cards{
+
+    border:4px solid #000;
+    padding: 10px;
+    border-radius: 25px;
+    
+}
+
+/* .cards:hover{
+    background-color: ;
+    transition:0.5s;
+} */
 
 
 
