--- a/stylesheet.css
+++ b/stylesheet.css
@@ -59,7 +59,7 @@
 
 /* #nav_bar:hover{
     background:none;
-    transition: 0.25s;
+    transition: 1.25s;
 } */
 #nav_bar ul{
     list-style:none;
@@ -67,16 +67,20 @@
     margin-top:auto;
     margin-bottom:auto;
     font-size: larger;
+    text-align: center;
 }
 
 #nav_bar ul li{
     display:inline-block;
     margin:5px 15px;
+    /* text-align: center; */
 }
 
 #nav_bar ul li a{
     text-decoration: none;
     color:#000;
+    text-align: center;
+    
 }
 
 #nav_bar ul li a:hover{
@@ -147,6 +151,8 @@
     width:184px;
     border:2px dashed #000;
     border-radius:15px;
+    transition: transform .75s;
+    overflow: hidden;
 }
 
 .cards{
@@ -154,13 +160,46 @@
     border:4px solid #000;
     padding: 10px;
     border-radius: 25px;
+    overflow: hidden;
     
 }
 
-/* .cards:hover{
-    background-color: ;
-    transition:0.5s;
+.img:hover {
+    transform: scale(1.05);
+}
+
+
+/* /* SHIFT */
+/* nav.shift ul li a {
+  position:relative;
+  z-index: 1;
+}
+nav.shift ul li a:hover {
+  color: #91640F;
+}
+nav.shift ul li a:after {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  margin: auto;
+  width: 100%;
+  height: 1px;
+  content: '.';
+  color: transparent;
+  background: #F1C40F;
+  visibility: none;
+  opacity: 0;
+  z-index: -1;
+}
+nav.shift ul li a:hover:after {
+  opacity: 1;
+  visibility: visible;
+  height: 100%;
 } */
+
 
 
 
